fixed stretching image

--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -42,7 +42,7 @@
   margin-bottom: -60px;
   img {
     border-radius: 5px;
-    height: 460px;
+    height: auto;
   }
 }
 
